<?xml version="1.0"?>
<package format="2">
  <name>epson_imu_spi_ros2</name>
  <version>1.0.0</version>
  <description>C++ Wrapper for ROS2 node of epson_imu_spi_driver package</description>
  <maintainer email="raymond.chow@ea.epson.com">Raymond Chow</maintainer>
  <license>BSD-3</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <!-- depend>rclcpp_components</depend -->
  <!-- depend>rmw_fastrtps_cpp</depend -->
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <!-- exec_depend>rosidl_default_runtime</exec_depend -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
